Fix border overlap

--- a/packages/core/src/components/button/_button-group.scss
+++ b/packages/core/src/components/button/_button-group.scss
@@ -108,6 +108,12 @@ Styleguide button-group
     > .#{$ns}-button:not(:last-child) {
       border-bottom-right-radius: 0;
       border-top-right-radius: 0;
+    }
+  }
+
+  &:not(.#{$ns}-minimal):not(.#{$ns}-outlined) {
+    > .#{$ns}-popover-wrapper:not(:last-child) .#{$ns}-button,
+    > .#{$ns}-button:not(:last-child) {
       margin-right: -$button-border-width;
     }
   }
@@ -138,6 +144,12 @@ Styleguide button-group
   &.#{$ns}-outlined {
     .#{$ns}-button {
       @include pt-button-outlined();
+    }
+
+    &:not(.#{$ns}-vertical) {
+      .#{$ns}-button:not(:last-child) {
+        border-right: none;
+      }
     }
   }
 
@@ -218,6 +230,10 @@ Styleguide button-group
       margin-right: 0 !important; /* stylelint-disable-line declaration-no-important */
       // needed to ensure buttons take up the full width when wrapped in a Popover:
       width: 100%;
+
+      &:not(:last-child) {
+        border-bottom: none;
+      }
     }
 
     &:not(.#{$ns}-minimal), &.#{$ns}-outlined {
@@ -230,7 +246,9 @@ Styleguide button-group
       > .#{$ns}-button:last-child {
         border-radius: 0 0 $pt-border-radius $pt-border-radius;
       }
+    }
 
+    &:not(.#{$ns}-minimal):not(.#{$ns}-outlined) {
       > .#{$ns}-popover-wrapper:not(:last-child) .#{$ns}-button,
       > .#{$ns}-button:not(:last-child) {
         margin-bottom: -$button-border-width;
